2006-06-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/AttributeList.java,
	* javax/management/JMRuntimeException.java,
	* javax/management/RuntimeOperationsException.java:
	New files.
	
2006-06-15  Lillian Angel  <langel@redhat.com>

	* java/awt/font/TextLayout.java:
	DEFAULT_CARET_POLICY changed to be public static final.

2006-06-15  Tania Bento  <tbento@redhat.com>

	* javax/swing/plaf/metal/MetalScrollButton.java
	(MetalScrollButton): Should set 'focusable' to false.

2006-06-15  Tania Bento  <tbento@redhat.com>

	* javax/swing/plaf/basic/BasicArrowButton.java
	(BasicArrowButton): Should set 'focusable' to false.
	(BasicArrowButton): Should set 'focusable' to false.

2006-06-15  Mark Wielaard  <mark@klomp.org>

	* gnu/java/awt/peer/gtk/GtkComponentPeer.java
	(getGraphicsConfiguration): Return default screen device.
	* gnu/java/awt/peer/gtk/GtkVolatileImage.java (component):
	New field.
	(GtkVolatileImage): Record initiating component.
	* gnu/java/awt/peer/gtk/VolatileImageGraphics.java
	(getDeviceConfiguration): Return configuration of image component.

2006-06-15  Mark Wielaard  <mark@klomp.org>

	* java/awt/geom/GeneralPath.java (closePath): Return if path already
	closed.

2006-06-15  Mark Wielaard  <mark@klomp.org>

	* java/awt/BasicStroke.java (createStrokedShape): Call getPathIterator
	with null argument.

2006-06-15  Kyle Galloway  <kgallowa@redhat.com>

	* gnu/classpath/jdwp/event/filters/ExceptionOnlyFilter.java
	(matches): Added explicit brackets to return statement.

2006-06-15  Tania Bento  <tbento@redhat.com>

	* javax/swing/JRadioButtonMenuItem.java
	(JRadioButtonMenuItem): Should set 'focusable' to false.

2006-06-15  Tania Bento  <tbento@redhat.com>

	* javax/swing/JCheckBoxMenuItem.java
	(JCheckBoxMenuItem): Should set 'focusable' to false.

2006-06-15  Tania Bento  <tbento@redhat.com>

	* javax/swing/AbstractButton.java:
	(AbstractButton): 'Focusable' should be set to true and not false.
