@@ -1,5 +1,16 @@
 2006-06-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* javax/management/AttributeList.java:
+	Add serialization UID.
+	* javax/management/DynamicMBean.java:
+	New file.
+	* javax/management/JMRuntimeException.java:
+	Add serialization UID and correct name
+	of serialized field.
+	* javax/management/MBeanInfo.java: New file.
+	
+2006-06-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* javax/management/AttributeList.java,
 	* javax/management/JMRuntimeException.java,
 	* javax/management/RuntimeOperationsException.java:
